<?php

namespace App\AbstractFactory\AbstractFactory;

/**
 * Class AbstractArmor
 * @package App\AbstractFactory\AbstractFactory
 */
abstract class AbstractArmor
{

}