<?php

namespace App\AbstractFactory\AbstractFactory;

/**
 * Class AbstractBoots
 * @package App\AbstractFactory\AbstractFactory
 */
abstract class AbstractBoots
{

}