<?php

namespace App\AbstractFactory\AbstractFactory;

/**
 * Class AbstractHat
 * @package App\AbstractFactory\AbstractFactory
 */
abstract class AbstractHat
{

}