<?php

namespace App\AbstractFactory\AbstractFactory;

/**
 * Class AbstractHelmet
 * @package App\AbstractFactory\AbstractFactory
 */
abstract class AbstractHelmet
{

}