<?php

namespace App\AbstractFactory\AbstractFactory;

/**
 * Class AbstractWeapon
 * @package App\AbstractFactory\AbstractFactory
 */
abstract class AbstractWeapon
{

}