<?php

namespace App\AbstractFactory\Pokemon;

use App\AbstractFactory\AbstractFactory\AbstractArmor;

/**
 * Class PokemonArmor
 * @package App\AbstractFactory\Pokemon
 */
class PokemonArmor extends AbstractArmor
{

}