<?php

namespace App\AbstractFactory\Pokemon;

use App\AbstractFactory\AbstractFactory\AbstractBoots;

/**
 * Class PokemonBoots
 * @package App\AbstractFactory\Pokemon
 */
class PokemonBoots extends AbstractBoots
{

}