<?php

namespace App\AbstractFactory\Pokemon;

use App\AbstractFactory\AbstractFactory\AbstractHat;

/**
 * Class PokemonHat
 * @package App\AbstractFactory\Pokemon
 */
class PokemonHat extends AbstractHat
{

}