<?php

namespace App\AbstractFactory\Pokemon;

use App\AbstractFactory\AbstractFactory\AbstractHelmet;

/**
 * Class PokemonHelmet
 * @package App\AbstractFactory\Pokemon
 */
class PokemonHelmet extends AbstractHelmet
{

}