<?php

namespace App\AbstractFactory\Pokemon;

use App\AbstractFactory\AbstractFactory\AbstractWeapon;

/**
 * Class PokemonWeapon
 * @package App\AbstractFactory\Pokemon
 */
class PokemonWeapon extends AbstractWeapon
{

}