<?php

namespace App\AbstractFactory\Warcraft;

use App\AbstractFactory\AbstractFactory\AbstractArmor;

/**
 * Class WarcraftArmor
 * @package App\AbstractFactory\Warcraft
 */
class WarcraftArmor extends AbstractArmor
{

}