<?php

namespace App\AbstractFactory\Warcraft;

use App\AbstractFactory\AbstractFactory\AbstractBoots;

/**
 * Class WarcraftBoots
 * @package App\AbstractFactory\Warcraft
 */
class WarcraftBoots extends AbstractBoots
{

}