<?php

namespace App\AbstractFactory\Warcraft;

use App\AbstractFactory\AbstractFactory\AbstractHat;

/**
 * Class WarcraftHat
 * @package App\AbstractFactory\Warcraft
 */
class WarcraftHat extends AbstractHat
{

}