<?php

namespace App\AbstractFactory\Warcraft;

use App\AbstractFactory\AbstractFactory\AbstractHelmet;

/**
 * Class WarcraftHelmet
 * @package App\AbstractFactory\Warcraft
 */
class WarcraftHelmet extends AbstractHelmet
{

}