<?php

namespace App\AbstractFactory\Warcraft;

use App\AbstractFactory\AbstractFactory\AbstractWeapon;

/**
 * Class WarcraftWeapon
 * @package App\AbstractFactory\Warcraft
 */
class WarcraftWeapon extends AbstractWeapon
{

}